compiler/tests/fixtures/invalid/semantics/non_negatable_expression_negated.viv
// Invalid: negation on non-negatable expression (literal)

action bad-negate:
    roles:
        @actor:
            as: initiator
    conditions:
        !5
